# mcodex

./: .git-commit-template  .gitignore  README.md  pyproject.toml  tool-box.sh
features/: build.feature  environment.py  git_snapshots.feature  init.feature  mcodex_smoke.feature  snapshots.feature
features/steps/: cli_steps.py  git_steps.py  snapshot_steps.py
mcodex/: __main__.py  cli.py  cli_utils.py  config.py  constants.py  errors.py  metadata.py  models.py  path_utils.py  version.py  yaml_utils.py
mcodex/package_templates/: __init__.py
mcodex/package_templates/templates/: README.md
mcodex/package_templates/templates/latex/: main.tex
mcodex/package_templates/templates/pandoc/: reference.docx  template.tex
mcodex/package_templates/templates/text/: README.txt  checklist.md  todo.md
mcodex/services/: author.py  build.py  build_context.py  create_text.py  fs.py  init_repo.py  pipeline.py  pipeline_list.py  snapshot.py  status.py  text_authors.py
tests/: test_author.py  test_build.py  test_build_context.py  test_build_resolution.py  test_config_env_override.py  test_constants.py  test_create_text.py  test_fs_safety.py  test_init_idempotence.py  test_init_templates.py  test_metadata_upgrade.py  test_path_utils.py  test_pipeline_config.py  test_pipeline_list.py  test_pipeline_runner.py  test_pipeline_templates.py  test_repo_config.py  test_snapshot_label_normalization.py  test_snapshots.py  test_text_authors.py  test_text_dir_resolution.py  test_version.py  test_yaml_utils.py
